Adds icons to selects.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -338,6 +338,7 @@
                                                         <option value="November">November</option>
                                                         <option value="December">December</option>
                                                     </select>
+                                                    <span class="custom-select_icon cf-icon cf-icon-down"></span>
                                                 </div>
                                             </div>
                                             <div class="input-group_item">
@@ -354,6 +355,7 @@
                                                         <option value="2012">2012</option>
                                                         <option value="2011">2011</option>
                                                     </select>
+                                                    <span class="custom-select_icon cf-icon cf-icon-down"></span>
                                                 </div>
                                             </div>
                                         </div>
@@ -380,6 +382,7 @@
                                                         <option value="November">November</option>
                                                         <option value="December">December</option>
                                                     </select>
+                                                    <span class="custom-select_icon cf-icon cf-icon-down"></span>
                                                 </div>
                                             </div>
                                             <div class="input-group_item">
@@ -396,6 +399,7 @@
                                                         <option value="2012">2012</option>
                                                         <option value="2011">2011</option>
                                                     </select>
+                                                    <span class="custom-select_icon cf-icon cf-icon-down"></span>
                                                 </div>
                                             </div>
                                         </div>
