Fix form for in landing.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -361,7 +361,7 @@
                                         </div>
                                         <div class="form-group_item input-group">
                                             <div class="input-group_item">
-                                                <label class="u-visually-hidden" for="filter_from_month">
+                                                <label class="u-visually-hidden" for="filter_to_month">
                                                     To month
                                                 </label>
                                                 <div class="custom-select">
