--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -316,91 +316,83 @@
                                             Date range
                                         </label>
                                         <div class="form-group_item input-group">
-                                            <div class="input-group_item">
+                                            <div class="input-group_item custom-select">
                                                 <label class="u-visually-hidden" for="filter_from_month">
                                                     From month
                                                 </label>
-                                                <div class="custom-select">
-                                                    <select class="form-input-month"
-                                                            id="filter_from_month"
-                                                            name="filter_from_month">
-                                                        <option value="">Month</option>
-                                                        <option value="January">January</option>
-                                                        <option value="February">February</option>
-                                                        <option value="March">March</option>
-                                                        <option value="April">April</option>
-                                                        <option value="May">May</option>
-                                                        <option value="June">June</option>
-                                                        <option value="July">July</option>
-                                                        <option value="August">August</option>
-                                                        <option value="September">September</option>
-                                                        <option value="October">October</option>
-                                                        <option value="November">November</option>
-                                                        <option value="December">December</option>
-                                                    </select>
-                                                    <span class="custom-select_icon cf-icon cf-icon-down"></span>
-                                                </div>
+                                                <select class="form-input-month"
+                                                        id="filter_from_month"
+                                                        name="filter_from_month">
+                                                    <option value="">Month</option>
+                                                    <option value="January">January</option>
+                                                    <option value="February">February</option>
+                                                    <option value="March">March</option>
+                                                    <option value="April">April</option>
+                                                    <option value="May">May</option>
+                                                    <option value="June">June</option>
+                                                    <option value="July">July</option>
+                                                    <option value="August">August</option>
+                                                    <option value="September">September</option>
+                                                    <option value="October">October</option>
+                                                    <option value="November">November</option>
+                                                    <option value="December">December</option>
+                                                </select>
+                                                <span class="custom-select_icon cf-icon cf-icon-down"></span>
                                             </div>
-                                            <div class="input-group_item">
+                                            <div class="input-group_item custom-select">
                                                 <label class="u-visually-hidden" for="filter_from_year">
                                                     From year
                                                 </label>
-                                                <div class="custom-select">
-                                                    <select class="form-input_year"
-                                                            id="filter_from_year"
-                                                            name="filter_from_year">
-                                                        <option value="">Year</option>
-                                                        <option value="2014">2014</option>
-                                                        <option value="2013">2013</option>
-                                                        <option value="2012">2012</option>
-                                                        <option value="2011">2011</option>
-                                                    </select>
-                                                    <span class="custom-select_icon cf-icon cf-icon-down"></span>
-                                                </div>
+                                                <select class="form-input_year"
+                                                        id="filter_from_year"
+                                                        name="filter_from_year">
+                                                    <option value="">Year</option>
+                                                    <option value="2014">2014</option>
+                                                    <option value="2013">2013</option>
+                                                    <option value="2012">2012</option>
+                                                    <option value="2011">2011</option>
+                                                </select>
+                                                <span class="custom-select_icon cf-icon cf-icon-down"></span>
                                             </div>
                                         </div>
                                         <div class="form-group_item input-group">
-                                            <div class="input-group_item">
+                                            <div class="custom-select input-group_item">
                                                 <label class="u-visually-hidden" for="filter_to_month">
                                                     To month
                                                 </label>
-                                                <div class="custom-select">
-                                                    <select class="form-input-month"
-                                                            id="filter_to_month"
-                                                            name="filter_to_month">
-                                                        <option value="">Month</option>
-                                                        <option value="January">January</option>
-                                                        <option value="February">February</option>
-                                                        <option value="March">March</option>
-                                                        <option value="April">April</option>
-                                                        <option value="May">May</option>
-                                                        <option value="June">June</option>
-                                                        <option value="July">July</option>
-                                                        <option value="August">August</option>
-                                                        <option value="September">September</option>
-                                                        <option value="October">October</option>
-                                                        <option value="November">November</option>
-                                                        <option value="December">December</option>
-                                                    </select>
-                                                    <span class="custom-select_icon cf-icon cf-icon-down"></span>
-                                                </div>
+                                                <select class="form-input-month"
+                                                        id="filter_to_month"
+                                                        name="filter_to_month">
+                                                    <option value="">Month</option>
+                                                    <option value="January">January</option>
+                                                    <option value="February">February</option>
+                                                    <option value="March">March</option>
+                                                    <option value="April">April</option>
+                                                    <option value="May">May</option>
+                                                    <option value="June">June</option>
+                                                    <option value="July">July</option>
+                                                    <option value="August">August</option>
+                                                    <option value="September">September</option>
+                                                    <option value="October">October</option>
+                                                    <option value="November">November</option>
+                                                    <option value="December">December</option>
+                                                </select>
+                                                <span class="custom-select_icon cf-icon cf-icon-down"></span>
                                             </div>
-                                            <div class="input-group_item">
+                                            <div class="custom-select input-group_item">
                                                 <label class="u-visually-hidden" for="filter_to_year">
                                                     To year
                                                 </label>
-                                                <div class="custom-select">
-                                                    <select class="form-input_year"
-                                                            id="filter_to_year"
-                                                            name="filter_to_year">
-                                                        <option value="">Year</option>
-                                                        <option value="2014">2014</option>
-                                                        <option value="2013">2013</option>
-                                                        <option value="2012">2012</option>
-                                                        <option value="2011">2011</option>
-                                                    </select>
-                                                    <span class="custom-select_icon cf-icon cf-icon-down"></span>
-                                                </div>
+                                                <select class="form-input_year"
+                                                        id="filter_to_year"
+                                                        name="filter_to_year">
+                                                    <option value="">Year</option>
+                                                    <option value="2014">2014</option>
+                                                    <option value="2013">2013</option>
+                                                    <option value="2012">2012</option>
+                                                    <option value="2011">2011</option>
+                                                </select>
+                                                <span class="custom-select_icon cf-icon cf-icon-down"></span>
                                             </div>
                                         </div>
                                     </div>
