Remove match custom select height to input height.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -279,7 +279,8 @@
                                         <label class="form-label-header" for="filter_tags">
                                             Topics
                                         </label>
-                                        <select class="chosen-select"
+                                        <input type="text">
+                                        <!-- <select class="chosen-select"
                                                 id="filter_tags"
                                                 name="filter_tags"
                                                 multiple
@@ -290,7 +291,7 @@
                                             <option value="tag4">Tag 4</option>
                                             <option value="tag5">Tag 5</option>
                                             <option value="tag6">Tag 6</option>
-                                        </select>
+                                        </select> -->
                                     </div>
                                     <div class="form-group">
                                         <label class="form-label-header" for="filter_author">
