Updates static pagination example.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -510,7 +510,10 @@
                     </a>
                 </article>
 
-                <nav class="post-pagination pagination" role="navigation" aria-label="Pagination">
+                <nav class="post-pagination pagination"
+                     role="navigation"
+                     aria-label="Pagination"
+                     data-ajax-action="posts-paginated.html">
                     <a class="btn pagination_prev" href="#pagination_content">
                         <span class="btn-icon-left cf-icon cf-icon-left"></span>
                         Newer
