--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -552,13 +552,13 @@
             </section><!-- END .content_main -->
 
             <aside class="content_sidebar">
-                <section class="popular-stories">
+                <section class="content_sidebar-item popular-stories">
                     <h1 class="header-slug">
                         <span class="header-slug_inner">
                             Popular stories
                         </span>
                     </h1>
-                    <ul class="list list__popular-stories list__unstyled list__spaced">
+                    <ul class="list list__unstyled list__spaced">
                         <li class="list_item">
                             <a class="list_link list_link__large" href="#">
                                 How to protect vulnerable children from credit reporting problems
@@ -586,10 +586,10 @@
                         </li>
                     </ul>
                 </section>
-                <section class="related-links">
+                <section class="content_sidebar-item related-links">
                     <div class="demo-placeholder">related links placeholder</div>
                 </section>
-                <section class="stay-informed">
+                <section class="content_sidebar-item stay-informed">
                     <div class="demo-placeholder">stay informed placeholder</div>
                 </section>
             </aside><!-- END .content_sidebar -->
