--- a/blog_static/post.html
+++ b/blog_static/post.html
@@ -544,13 +544,44 @@
             </section><!-- END .content_main -->
 
             <aside class="content_sidebar">
-                <section class="related-news">
+                <section class="content_sidebar-item related-posts">
+                    <h1 class="header-slug">
+                        <span class="header-slug_inner">
+                            Related blog posts
+                        </span>
+                    </h1>
+                    <ul class="list list__popular-stories list__unstyled list__spaced">
+                        <li class="list_item">
+                            <a class="list_link list_link__large" href="#">
+                                How to protect vulnerable children from credit reporting problems
+                            </a>
+                        </li>
+                        <li class="list_item">
+                            <a class="list_link list_link__large" href="#">
+                                Preventing illegal discrimination in auto lending
+                            </a>
+                        </li>
+                        <li class="list_item">
+                            <a class="list_link list_link__large" href="#">
+                                Our new mortgage visualization tool
+                            </a>
+                        </li>
+                        <li class="list_item">
+                            <a class="list_link list_link__large" href="#">
+                                Consumer advisory: Co-signers can cause surprise defaults on your private student loans
+                            </a>
+                        </li>
+                        <li class="list_item">
+                            <a class="list_link list_link__large" href="#">
+                                Our work on fair lending
+                            </a>
+                        </li>
+                    </ul>
+                </section>
+                <section class="content_sidebar-item related-news">
                     <div class="demo-placeholder">Related news placeholder</div>
                 </section>
-                <section class="related-stories">
-                    <div class="demo-placeholder">Related stories placeholder</div>
-                </section>
-                <section class="stay-informed">
+                <section class="content_sidebar-item stay-informed">
                     <div class="demo-placeholder">Stay informed placeholder</div>
                 </section>
             </aside><!-- END .content_sidebar -->
