--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -136,11 +136,11 @@
                                 <span class="u-visually-hidden">Category:</span>
                                 Announcements & updates
                             </span>
-                            <span class="summary">
+                            <div class="summary">
                                 <h1 class="summary_header">Preventing illegal discrimination in auto lending</h1>
                                 <p class="summary_text">Every year, millions of American families buy a car – and it will be one of the most significant purchases they make. One key priority for us is protecting consumers from the silent pickpocket of discrimination.</p>
                                 <p class="summary_byline">By Patrice Ficklin</p>
-                            </span>
+                            </div>
                         </div>
                     </div>
                 </a>
