Fixes sheer links.

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                                     Sheer demos
                                 </span>
                             </div>
-                            <h3><a href="blog/index.html">Blog landing page</a></h3>
-                            <h3><a href="blog/post.html">Blog post</a></h3>
+                            <h3><a href="blog/">Blog landing page</a></h3>
+                            <h3><a href="blog/spring-2014-rulemaking-agenda">Blog post</a></h3>
                         </div>
                         <div class="demo-col-6 demo-spaced">
                             <div class="meta-header">
