Small code review tweaks.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -316,10 +316,11 @@
                                             Date range
                                         </label>
                                         <div class="form-group_item"
-                                              id="filter_range_date_gte">
+                                             id="filter_range_date_gte">
                                             <input name="filter_range_date_gte"
                                                    type="text"
-                                                   value="2011-02">
+                                                   value="2011-02"
+                                                   placeholder="YYYY-MM">
                                         </div>
                                         <div class="form-group_item input-group"
                                              id="filter_range_date_gte-replacement"
@@ -365,7 +366,8 @@
                                              id="filter_range_date_lte">
                                             <input name="filter_range_date_lte"
                                                    type="text"
-                                                   value="2014-12">
+                                                   value="2014-12"
+                                                   placeholder="YYYY-MM">
                                         </div>
                                         <div class="form-group_item input-group"
                                              id="filter_range_date_lte-replacement"
