Updates static landing page.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -284,12 +284,19 @@
                                                 name="filter_tags"
                                                 multiple
                                                 data-placeholder="Select some options">
-                                            <option value="tag1">Tag 1</option>
-                                            <option value="tag2">Tag 2</option>
-                                            <option value="tag3">Tag 3</option>
-                                            <option value="tag4">Tag 4</option>
-                                            <option value="tag5">Tag 5</option>
-                                            <option value="tag6">Tag 6</option>
+                                            <optgroup label="Most frequent">
+                                                <option value="tag1">Tag 1</option>
+                                                <option value="tag2">Tag 2</option>
+                                                <option value="tag3">Tag 3</option>
+                                            </optgroup>
+                                            <optgroup label="All topics">
+                                                <option value="tag1">Tag 1</option>
+                                                <option value="tag2">Tag 2</option>
+                                                <option value="tag3">Tag 3</option>
+                                                <option value="tag4">Tag 4</option>
+                                                <option value="tag5">Tag 5</option>
+                                                <option value="tag6">Tag 6</option>
+                                            </optgroup>
                                         </select>
                                     </div>
                                     <div class="form-group">
