--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -283,7 +283,7 @@
                                                 id="filter_tags"
                                                 name="filter_tags"
                                                 multiple
-                                                data-placeholder="Select some options">
+                                                data-placeholder="Search for topics">
                                             <optgroup label="Most frequent">
                                                 <option value="tag1">Tag 1</option>
                                                 <option value="tag2">Tag 2</option>
@@ -307,7 +307,7 @@
                                                 id="filter_author"
                                                 name="filter_author"
                                                 multiple
-                                                data-placeholder="Select some options">
+                                                data-placeholder="Search for authors">
                                             <option value="author1">Author 1</option>
                                             <option value="author2">Author 2</option>
                                             <option value="author3">Author 3</option>
