Update filter button copy.

--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -82,7 +82,7 @@
                     <div class="expandable_header-right expandable_header-right__float-on-medium">
                         <a class="expandable_target btn btn-secondary"
                            href="#post-filters-form">
-                            Filter posts
+                            Filter newsroom
                             <span class="expandable_cue-open">
                                 <span class="btn-icon-right cf-icon cf-icon-down"></span>
                             </span>
