Add watchroom placeholder.

--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -132,6 +132,8 @@
                 </div>
             </div><!-- END .expandable -->
 
+            <div class="demo-placeholder">watchroom placeholder</div>
+
             {% include "posts-paginated.html" %}
 
             </section><!-- END .content_main -->
