--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
                             <a class="list_link" href="docs/layout/">Layout</a>
                         </li>
                         <li class="list_item">
+                            <a class="list_link" href="docs/nav-secondary/">Nav-secondary</a>
+                        </li>
+                        <li class="list_item">
                             <a class="list_link" href="docs/media-object/">Media object</a>
                         </li>
                         <li class="list_item">
