Update demo header.

--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block demo_title %}Blog listing{% endblock %}
+{% block demo_title %}Newsroom listing{% endblock %}
 
 {% block title %}Blog{% endblock %}
 
