Update meta description.

--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -2,9 +2,9 @@
 
 {% block demo_title %}Newsroom listing{% endblock %}
 
-{% block title %}Blog{% endblock %}
+{% block title %}Newsroom{% endblock %}
 
-{% block desc %}The official blog of the Consumer Financial Protection Bureau{% endblock %}
+{% block desc %}Press releases, speeches, op-eds, testimony, and blog posts produced by our Office of Communications{% endblock %}
 
 {% block content %}
 
