--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -1,12 +1,20 @@
 {% extends "base.html" %}
 
-{% block demo_title %}Newsroom listing{% endblock %}
+{% block demo_title -%}
+    Newsroom listing
+{%- endblock %}
 
-{% block title %}Newsroom{% endblock %}
-
-{% block desc %}Press releases, speeches, op-eds, testimony, and blog posts produced by our Office of Communications{% endblock %}
+{% block title -%}
+    Newsroom
+{%- endblock %}
+{% block desc -%}
+    Press releases, speeches, op-eds, testimony, and blog posts produced by our Office of Communications
+{%- endblock %}
 
 {% block content %}
+
+
+    {# Variables #}
 
     {% set active_filters =
        selected_filters_for_field('category') +
@@ -24,50 +32,10 @@
     {% set posts = queries.posts.search_with_url_arguments(size=10) %}
     {% set view = get_document('views', 'blog') %}
 
-    {% macro filter_checkbox(field, value, classes, hidden) %}
-        <input class="custom-input"
-               type="checkbox"
-               name="filter_{{ field }}"
-               value="{{ value }}"
-               {%- if is_filter_selected(field, value) %}
-               checked
-               {%- endif -%}
-               >
-            {{ value }}
-    {% endmacro %}
+    {# Macros #}
 
-    {% macro filter_option(field, value) %}
-        <option value="{{ value }}"
-            {%- if is_filter_selected(field, value) %}
-                selected
-            {%- endif -%}
-                >
-            {{ value }}
-        </option>
-    {% endmacro %}
+    {% import "post-macros.html" as post_macros with context %}
 
-    {% macro print_hidden_filters(filter_fields) %}
-        {%- for field in filter_fields -%}
-            {% set selected_filters = selected_filters_for_field(field) %}
-            {%- for value in selected_filters -%}
-                {%- if value %}
-                <input type="hidden" name="filter_{{ field }}" value="{{ value }}">
-                {%- endif -%}
-            {%- endfor -%}
-        {%- endfor -%}
-    {% endmacro %}
-
-    {% macro category_icon(category, additional_classes) %}
-        {%- if category|lower == 'announcements & updates' -%}
-        <span class="{{ additional_classes }} cf-icon cf-icon-bullhorn"></span>
-        {% elif category|lower == 'consumer information' -%}
-        <span class="{{ additional_classes }} cf-icon cf-icon-information"></span>
-        {% elif category|lower == 'engagement' -%}
-        <span class="{{ additional_classes }} cf-icon cf-icon-dialogue"></span>
-        {% elif category|lower == 'innovation & data' -%}
-        <span class="{{ additional_classes }} cf-icon cf-icon-lightbulb"></span>
-        {%- endif -%}
-    {% endmacro %}
 
     <main class="content content__1-3" id="main" role="main">
 
@@ -78,60 +46,7 @@
 
             <section class="content_main">
 
-                <div class="expandable">
-                    <div class="expandable_header expandable_header__spaced">
-                        <div class="expandable_header-right expandable_header-right__float-on-medium">
-                            <a class="expandable_target btn btn-secondary"
-                               href="#post-filters-form">
-                                Filter newsroom
-                                <span class="expandable_cue-open">
-                                    <span class="btn-icon-right cf-icon cf-icon-down"></span>
-                                </span>
-                                <span class="expandable_cue-close">
-                                    <span class="btn-icon-right cf-icon cf-icon-up"></span>
-                                </span>
-                            </a>
-                        </div>
-                    {% if active_filters_total > 0 %}
-                        <dl class="filtered-by filtered-by__show-on-medium filtered-by__align-with-btn list list__horizontal">
-                            <dt class="list_item">
-                                <span class="filtered-by_header">
-                                {%- if posts|list|length > 0 -%}
-                                    {{ posts.total }} filtered result{{ 's' if posts.total > 1 }} for
-                                {%- else -%}
-                                    No results for
-                                {%- endif -%}
-                                </span>
-                            </dt>
-                        {% for filter in active_filters %}
-                            <dd class="list_item">
-                                <span class="filtered-by_filter">
-                                    {{ filter }}
-                                    {%- if not loop.last -%}
-                                    ,
-                                    {%- elif active_date_filters|length > 0 -%}
-                                    ,
-                                    {%- endif -%}
-                                </span>
-                            </dd>
-                        {% endfor %}
-                        {% for filter in active_date_filters %}
-                            <dd class="list_item">
-                                <span class="filtered-by_filter">
-                                    {{ filter | date("%B %Y") }}
-                                    {% if not loop.last -%}&nbsp;&ndash;{% endif %}
-                                </span>
-                            </dd>
-                        {% endfor %}
-                        </dl>
-                    {% endif %}
-                    </div>
-                    <div class="expandable_content padded-container">
-                        <div class="padded-container_body">
-                            {% include "filters.html" %}
-                        </div>
-                    </div>
-                </div><!-- END .expandable -->
+                {% include "post-filters.html" %}
 
                 <div class="demo-placeholder">watchroom placeholder</div>
 
