Add .content_footer pattern for newsroom aside content.

--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -52,27 +52,46 @@
 
                 {% include "posts-paginated.html" %}
 
-                <aside>
-                    <section class="content_sidebar-item stay-informed">
-                        <div class="demo-placeholder">stay informed placeholder</div>
-                    </section>
-                    <section class="content_sidebar-item related-links">
-                        <h1 class="header-slug">
-                            <span class="header-slug_inner">
-                                Related links
-                            </span>
-                        </h1>
-                        <ul class="list list__unstyled list__spaced">
-                            {% for link in view.related_links %}
-                            <li class="list_item">
-                                <a class="list_link"
-                                   href="{{ link[0] }}">
-                                    {{ link[1] }}
-                                </a>
-                            </li>
-                            {% endfor %}
-                        </ul>
-                    </section>
+                <aside class="content_footer stay-informed">
+                    <h1 class="header-slug">
+                        <span class="header-slug_inner">
+                            Stay informed
+                        </span>
+                    </h1>
+                    <div class="demo-placeholder">
+                        placeholder
+                    </div>
+                </aside>
+
+                <aside class="content_footer content_footer__bg">
+                        <section class="content_footer_item related-links">
+                            <h1 class="header-slug">
+                                <span class="header-slug_inner">
+                                    Related links
+                                </span>
+                            </h1>
+                            <ul class="list list__unstyled list__spaced">
+                                {% for link in view.related_links %}
+                                <li class="list_item">
+                                    <a class="list_link"
+                                       href="{{ link[0] }}">
+                                        {{ link[1] }}
+                                    </a>
+                                </li>
+                                {% endfor %}
+                            </ul>
+                        </section>
+
+                        <section class="content_footer_item">
+                            <h1 class="header-slug">
+                                <span class="header-slug_inner">
+                                    Upcoming events
+                                </span>
+                            </h1>
+                            <div class="demo-placeholder">
+                                placeholder
+                            </div>
+                        </section>
                 </aside>
 
             </section><!-- END .content_main -->
