Update header in related post.

--- a/newsroom/_single.html
+++ b/newsroom/_single.html
@@ -136,7 +136,7 @@
                 <section class="content_sidebar-item related-posts">
                     <h1 class="header-slug">
                         <span class="header-slug_inner">
-                            Related blog posts
+                            Related posts
                         </span>
                     </h1>
                     <ul class="list list__unstyled list__spaced">
